# goit-pythonweb-hw-12

./: .coverage  .env.example  .gitignore  Dockerfile  PASSWORD_RESET_REPORT.md  README.md  build-docs.bat  build-docs.sh  docker-compose.test.yml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  test_email_verification.py  test_password_reset.py
.github/: copilot-instructions.md
docs/: Dockerfile.docs  Makefile  README.md  build-docs-local.ps1  conf.py  index.rst  make.bat  overview.rst
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  overview.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: README.doctree  environment.pickle  index.doctree  overview.doctree  quickstart.doctree
docs/_build/html/_sources/: quickstart.rst.txt
docs/_build/html/api/: authentication.html  contacts.html  index.html
docs/api/: authentication.rst
docs/modules/: api_modules.rst  repository.rst
src/: schemas.py
src/api/: admin.py  auth.py  cache.py  contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: admin.py  auth.py  cache.py  cloudinary.py  contacts.py  email.py  middleware.py  rate_limiter.py  users.py
templates/: password_reset_email.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: conftest.py  test_auth_service.py  test_config.py  test_database_utils.py  test_models.py  test_repositories.py  test_roles.py  test_schemas.py  test_services.py  test_simple_models.py
(+24 files in other folders)
